Adds pointer to check button, fixes some minor text issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                 <div class="row ">
                     <div class="col order-sm-0 order-md-0 order-lg-2">
                         <div class="card">
-                                <h3 class="card-header">Last websites checked: </h3>
+                                <h3 class="card-header">Last websites checked</h3>
                                   <ul class="list-group list-group-flush">
                                       {% for el in last %}
                                           <li class="list-group-item">
@@ -76,16 +76,16 @@
                         </div>
                         <div class="card">
                             <div class="card-body">
-                            <h2 class="card-title">How does it work?</h2>
-                                <p class="card-text">It will send an HEAD request on both HTTP (port 80) and HTTPS (port 463) of the requested host. <br>The site will appear as online, even if it returns a bad response because the server is up. <br /><code>Isitdown.site</code>'s server is located in Germany.</p>
+                            <h2 class="card-title">How it works</h2>
+                                <p class="card-text">It will send an HEAD request on both HTTP (port 80) and HTTPS (port 463) of the requested host. <br>The site will appear as online if either one the two ports will send a response and even if it is a bad response because the server is up.<br /><code>Isitdown.site</code>'s server is located in Germany.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col order-lg-3">
                         <div class="card">
                             <div class="card-body">
-                            <h3 class="card-title">Command line lover?</h3>
-                            <p class="card-text">Check if a site is down via command line, as simple as this:</p>
+                            <h3 class="card-title">For command line lovers</h3>
+                            <p class="card-text">Check if a site is down via command line, it's as simple as this:</p>
                             <code>curl https://isitdown.site/api/v2/google.com</code>
                             </div>
                         </div>
