--- a/isitdown/static/css/main.css
+++ b/isitdown/static/css/main.css
@@ -159,6 +159,7 @@ form {
     border-bottom: 2px solid #52BAAF;
     font-size: 1.2em;
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    cursor: pointer;
 }
 
 #check:hover {
