--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,10 @@
                         <div class="card">
                             <div class="card-body">
                             <h2 class="card-title">How it works</h2>
-                                <p class="card-text">It will send an HEAD request on both HTTP (port 80) and HTTPS (port 463) of the requested host. <br>The site will appear as online if either one the two ports will send a response and even if it is a bad response because the server is up.<br /><code>Isitdown.site</code>'s server is located in Germany.</p>
+                                <p class="card-text">It will send an HEAD request on both HTTP (port 80) and HTTPS (port 463) of the requested host. <br>
+                                    The site will appear as online if either one of the two ports will send a response and even if it is a bad response (5xx).<br />
+                                    <code>Isitdown.site</code>'s server is located in Germany.
+                                </p>
                             </div>
                         </div>
                     </div>
