--- a/isitdown/static/css/main.css
+++ b/isitdown/static/css/main.css
@@ -191,7 +191,7 @@ footer a:hover {
     font-weight: bold;
 }
 
-.card-text a {
+.card a {
     color: black;
     border-bottom: 1px dotted black;
 }
