--- a/isitdown/templates/index.html
+++ b/isitdown/templates/index.html
@@ -89,7 +89,15 @@
                             <div class="card-body">
                             <h3 class="card-title">For command line lovers</h3>
                             <p class="card-text">Check if a site is down via command line, it's as simple as this:</p>
-                            <code>curl https://isitdown.site/api/v2/google.com</code>
+                            <code>curl https://isitdown.site/api/v3/google.com</code><br><br>
+                                <pre class="response_example" style="text-align:left;">
+{
+  "deprecated": false,
+  "host": "google.com",
+  "isitdown": false,
+  "response_code": 200
+}
+</pre>
                             </div>
                         </div>
                         <div class="card">
