Adds a note for the response code different than 200

--- a/isitdown/templates/index.html
+++ b/isitdown/templates/index.html
@@ -67,10 +67,12 @@
                                 <h3 class="card-title">About</h3>
                                 <p class="card-text">With this site you can easily check if a site is down or if you have one of the following most common problems:
                                     <ul>
-                                        <li><strong>Browser problem:</strong> Try clearing your browser cache. Hit <code>ctrl+shift+r</code>. You can also try to disable your ad-blocker and refresh the page.</li>
+                                        <li><strong>Browser problem:</strong> Try clearing your browser cache. You can also try to disable your ad-blocker and refresh the page.</li>
                                         <li><strong>Router's problem:</strong> Restart your router. Turn it off, wait 15 seconds, and turn it on again.</li>
-                                        <li><strong>DNS Problem:</strong> It may happen that your ISP blocks that domain.<br>Using an <a href="https://www.opendns.com/setupguide/" title="Opendns">alternative dns</a> may help.</li>
+                                        <li><strong>DNS Problem:</strong> It may happen that your ISP blocks that domain.<br>Using an <a href="https://www.opendns.com/setupguide/" title="Opendns">alternative dns</a> may solve the issue.</li>
+                                        <li><strong>Server problem:</strong>If you use IsItDown and see a "Response code" different than 200 (for example 500), it means the site is up but the server has some problems. You cannot do anything about it but wait until some admin solves the situation.</li>
                                     </ul>
+
                                 </p>
                             </div>
                         </div>
