--- a/isitdown/templates/404.html
+++ b/isitdown/templates/404.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1>404 -Page Not Found</h1>
-    <p>This is embarassing. Sorry, but the page you were trying to view does not exist.</p>
+    <p>This is embarrassing. Sorry, but the page you were trying to view does not exist.</p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
