clarify api usage

--- a/isitdown/templates/index.html
+++ b/isitdown/templates/index.html
@@ -100,6 +100,10 @@
   "response_code": 200
 }
 </pre>
+                                <p class="card-text">Please notice: this API is meant to be used as a one-off check.
+                                    If you want to run regular checks on your website(s) you can use any paid service available online.<br>
+                                    Abusing this api will lead to ban.
+                                </p>
                             </div>
                         </div>
                         <div class="card">
